--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.13.0",
+    "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
